# amani_topolgy_constrained

./: CMakeLists.txt  amani_Readme  main.cpp
DMCore/Arrangement/: Arrangement.h  Arrangement_main.cpp  Arrangement_surface.cpp  Ctr2ArHandler.cpp  Ctr2ArHandler.h
DMCore/GroupingManager/: GroupingManager.cpp
DMCore/LuCtr2Suf/ContourHandler/: ContourHandler.h
DMCore/LuCtr2Suf/JuFair/: meshFair.h
DMCore/LuCtr2Suf/Util/: SetOperation.h
DMCore/MingTriMultPoly/Algorithm/: DMWT.cpp  DMWT.h
DMCore/MingTriMultPoly/DataStructure/: Boundary.h  Hole.cpp  Hole.h  SubKey.h  Tile.h
DMCore/MingTriMultPoly/Utility/: Configure.h
Input/Knot/: knot_unknown.contour
Input/Simple/: simple.contour  simple_pyramid.comtour
my_results/: time.txt
my_results/Knot/: ContuorEdges.txt  time.txt
my_results/Knot_extra/: time.txt
my_results/Knot_unknown/: time.txt
my_results/Mug/: ContuorEdges.txt  time.txt
my_results/Simple/: ContuorEdges.txt  boundaryMats_0.txt  boundaryMats_1.txt  boundaryMats_2.txt  boundaryMats_3.txt
